--- a/ARTWeb/Areas/mvc/src/scss/_global.scss
+++ b/ARTWeb/Areas/mvc/src/scss/_global.scss
@@ -88,7 +88,7 @@ a {
 }
 
 .login-input-box {
-    input[type="text"] {
+    input[type="text"], input[type="password"] {
         border: none;
         border-radius: 3px;
         color: $black;
